# tootdesk

./: .gitignore  README.md  Rakefile
src/: CMakeLists.txt
src/gui/: CMakeLists.txt  lambdarunnable.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mastodontypes.h  resources.qrc  simpleaddresswidget.cpp  simpleaddresswidget.h  statuswidget.cpp  statuswidget.h  timelinewidget.cpp  timelinewidget.h  tootdesk.pro
src/gui/deskapi/: account.cpp  account.h  coretypes.h  deskapi.h  error.h  lambdarunnable.h  mastodonerror.h  mastodontypes.h  server.cpp  server.h  status.cpp  status.h
src/gui/deskgui/: authdialog.cpp  authdialog.h  deskgui.h  errorhandling.h  serverdialog.h  serverswidget.cpp  serverswidget.h  servertablemodel.cpp  servertablemodel.h  statuslistmodel.cpp  statuslistmodel.h  statuslistwidget.cpp  statuslistwidget.h  statustablemodel.cpp  statustablemodel.h  statuswidget.cpp  statuswidget.h
src/test/: CMakeLists.txt  curl-test.cpp  jsoncpp-test.cpp  mastodon-cpp-test.cpp  test-main.cpp
src/test/gui/deskapi/: error-test.cpp  server-test.cpp  status-and-account-test.cpp
